Switch to selenide test cases, remove graphene/drone